--- a/SignalR_Sample/Views/Home/Index.cshtml
+++ b/SignalR_Sample/Views/Home/Index.cshtml
@@ -11,6 +11,14 @@
             <span id="totalViewsCounter"></span>
         </div>
     </div>
+    <div class="row">
+        <div class="col-3">
+            Total Users:
+        </div>
+        <div class="col-4">
+            <span id="totalUsersCounter"></span>
+        </div>
+    </div>
 </div>
 
 
